# fiit-effective-algorithms

./: CMakeLists.txt  README.md  bonus.c  skuska.c  uloha1-1.c  uloha1-2.c  uloha2-1.c  uloha2-2.c  uloha2-2a.c  uloha3-1.c  uloha3-2.c  uloha3-2a.c  uloha4-1.c  uloha4-2.c  uloha5-1.c  uloha5-1a.c  uloha5-2.c  uloha5-2a.c  uloha6-1.c  uloha6-2.c  uloha6-2a.c  uloha7-1.c  uloha7-2.c  uloha7-2a.c  uloha8-1.c  uloha8-1a.c  uloha8-2.c
