cmake_minimum_required(VERSION 3.21)
project(Cvienia C)

set(CMAKE_C_STANDARD 99)

add_executable(Uloha1-1 uloha1-1.c)
add_executable(Uloha1-2 uloha1-2.c)

add_executable(Uloha2-1 uloha2-1.c)
add_executable(Uloha2-2 uloha2-2.c)

add_executable(Uloha3-1 uloha3-1.c)
add_executable(Uloha3-2 uloha3-2.c)

add_executable(Uloha4-1 uloha4-1.c)
add_executable(Uloha4-2 uloha4-2.c)

add_executable(Uloha5-1 uloha5-1.c)
add_executable(Uloha5-1a uloha5-1a.c)
add_executable(Uloha5-2 uloha5-2.c)

add_executable(Uloha6-1 uloha6-1.c)
add_executable(Uloha6-2 uloha6-2.c)

add_executable(Uloha7-1 uloha7-1.c)
add_executable(Uloha7-2 uloha7-2.c)
add_executable(Uloha7-2a uloha7-2a.c)

add_executable(Uloha8-1 uloha8-1.c)
add_executable(Uloha8-2 uloha8-2.c)

add_executable(Bonus bonus.c)
add_executable(Skuska skuska.c)
